--- a/Blog/css/styles.css
+++ b/Blog/css/styles.css
@@ -1,5 +1,7 @@
 body {
-    font-family: "Times New Roman", Times, serif;
+    /*font-family: "Times New Roman", Times, serif;*/
+    /*font-family: Sofia, sans-serif;*/
+    font-family: Nunito, sans-serif;
 }
 
 a {
