--- a/Blog/css/styles.css
+++ b/Blog/css/styles.css
@@ -16,3 +16,20 @@ a {
 body.scrolled #back-to-top {
     display: block;
 }
+
+/* Set styles for the container div */
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 aspect ratio (iframe height is 56.25% of container width) */
+}
+
+/* Style the iframe to take up 100% of the container */
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
